"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2009-05-10	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-17-connect-03-03:
	  Added support for passn/passp macros to count as fanin/fanout.
		Added a few test cases to cover this in prs/.
	  Note weak and iskeeper rules currently count as fanin/fanout, 
		next patch will address this.


2009-05-08	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-17-connect-03-02:
	  Improved diagnostic on definition-member-instances, reporting
		the complete type (footprint) to which an instance
		belongs for more accurate feedback.
		Practically all create tests were updated accordingly.
	  This patch could've gone into trunk directly.


2009-05-07	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-17-connect-03-01:
	  New branch for developing connectivity analysis and diagnostics, 
		much of which is needed for eventual netlist generation.
	  Added PRS-connectivity flags to bool_connect_policy -- these are
		not user-settable, only computed based on PRS, and 
		propagated up hierarchy.
	  create phase now reports diagnostics for nodes with fanout,
		but missing fanin (warning only).  Test cases updated. 


2009-04-29	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-17:
	  Patched to support FSF's g++-4.4, released last week!
		Various uninitialized warnings in some trace ctors, 
		some invalid private accesses in Object/state_manager.h.
	  scripts/init_hackt.*.in: replace LTDL_LIBRARY_PATH with
		AC_SUBST'd @LTDL_SHLIBPATH_VAR@, which is DYLD_LIBRARY_PATH
		on Darwin, this was broken since the guile re-work -83-02.
	  SPEC registry: replaced util::qmap with std::map.


2009-04-27	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-16-b:
	  No real source revision.