@@ -1,7 +1,7 @@
 /**
 	\file "AST/PRS_fwd.h"
 	Forward declarations for the PRS namespace.  
-	$Id: PRS_fwd.h,v 1.7 2008/03/20 00:03:14 fang Exp $
+	$Id: PRS_fwd.h,v 1.7.14.1 2009/05/12 21:51:20 fang Exp $
 	This used to be the following before it was renamed:
 	Id: art_parser_prs_fwd.h,v 1.2.52.1 2005/12/11 00:45:09 fang Exp
  */
@@ -19,6 +19,7 @@ namespace PRS {
 class body;
 class body_item;
 class literal;
+class precharge;
 class rule;
 typedef	node_list<const body_item>	rule_list;
 class loop;
